--- a/requirements.txt
+++ b/requirements.txt
@@ -19,14 +19,17 @@ jiter==0.8.2
 lxml==5.3.0
 MarkupSafe==3.0.2
 openai==1.61.0
+pip==25.0.1
 PyAudio==0.2.14
 pydantic==2.10.6
 pydantic_core==2.27.2
 pydub==0.25.1
 python-docx==1.1.2
+setuptools==60.2.0
 sniffio==1.3.1
 tqdm==4.67.1
 typing_extensions==4.12.2
 Wave==0.0.2
 Werkzeug==3.1.3
+wheel==0.37.1
 zipp==3.21.0
