--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ distro==1.9.0
 exceptiongroup==1.2.2
 Flask==3.1.0
 Flask-Cors==5.0.0
+gevent==24.11.1
+greenlet==3.1.1
 gunicorn==23.0.0
 h11==0.14.0
 httpcore==1.0.7
@@ -17,21 +19,22 @@ importlib_metadata==8.6.1
 itsdangerous==2.2.0
 Jinja2==3.1.5
 jiter==0.8.2
+langdetect==1.0.9
 lxml==5.3.0
 MarkupSafe==3.0.2
 openai==1.61.0
 packaging==24.2
-pip==25.0.1
 PyAudio==0.2.14
 pydantic==2.10.6
 pydantic_core==2.27.2
 pydub==0.25.1
 python-docx==1.1.2
-setuptools==60.2.0
+six==1.17.0
 sniffio==1.3.1
 tqdm==4.67.1
 typing_extensions==4.12.2
 Wave==0.0.2
 Werkzeug==3.1.3
-wheel==0.37.1
 zipp==3.21.0
+zope.event==5.0
+zope.interface==7.2
