--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,15 @@
+amqp==5.3.1
 annotated-types==0.7.0
 anyio==4.8.0
+async-timeout==5.0.1
+billiard==4.2.1
 blinker==1.9.0
+celery==5.4.0
 certifi==2025.1.31
 click==8.1.8
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
 colorama==0.4.6
 distro==1.9.0
 exceptiongroup==1.2.2
@@ -19,21 +26,28 @@ importlib_metadata==8.6.1
 itsdangerous==2.2.0
 Jinja2==3.1.5
 jiter==0.8.2
+kombu==5.4.2
 langdetect==1.0.9
 lxml==5.3.0
 MarkupSafe==3.0.2
 openai==1.61.0
 packaging==24.2
+prompt_toolkit==3.0.50
 PyAudio==0.2.14
 pydantic==2.10.6
 pydantic_core==2.27.2
 pydub==0.25.1
+python-dateutil==2.9.0.post0
 python-docx==1.1.2
+redis==5.2.1
 six==1.17.0
 sniffio==1.3.1
 tqdm==4.67.1
 typing_extensions==4.12.2
+tzdata==2025.1
+vine==5.1.0
 Wave==0.0.2
+wcwidth==0.2.13
 Werkzeug==3.1.3
 zipp==3.21.0
 zope.event==5.0
